<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/main_screen_background_color"
    tools:context=".MainActivity"
    android:padding="16dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="8dp">
                <ImageView
                    android:id="@+id/main_img"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/wind"
                    android:src="@drawable/snowflake"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/tv_main"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:textColor="@color/primary_text_color"
                        android:textSize="18sp"
                        android:text="@string/weather"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:id="@+id/tv_main_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:textColor="@color/secondary_text_color"
                        android:textSize="16sp"
                        android:text="@string/condition"/>

                </LinearLayout>


            </LinearLayout>
        </androidx.cardview.widget.CardView>


        //first row second card view
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="8dp">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/wind"
                    android:src="@drawable/humidity"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/tv_temp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:textColor="@color/primary_text_color"
                        android:textSize="18sp"
                        android:text="@string/degree"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:textColor="@color/secondary_text_color"
                        android:textSize="16sp"
                        android:text="@string/percent"/>

                </LinearLayout>


            </LinearLayout>
        </androidx.cardview.widget.CardView>




    </LinearLayout>
// second row

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="8dp">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/wind"
                    android:src="@drawable/temperature"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/tv_mini_temp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:textColor="@color/primary_text_color"
                        android:textSize="18sp"
                        android:text="Minimum"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:id="@+id/tv_max_temp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:textColor="@color/secondary_text_color"
                        android:textSize="16sp"
                        android:text="Maximum"/>

                </LinearLayout>


            </LinearLayout>
        </androidx.cardview.widget.CardView>


        //first row second card view
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="8dp">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/wind"
                    android:src="@drawable/wind"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView

                        android:id="@+id/tv_wind"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:textColor="@color/primary_text_color"
                        android:textSize="18sp"
                        android:text="@string/wind"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:textColor="@color/secondary_text_color"
                        android:textSize="16sp"
                        android:text="@string/miles_hour"/>

                </LinearLayout>


            </LinearLayout>
        </androidx.cardview.widget.CardView>




    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        app:cardCornerRadius="8dp"
        android:elevation="5dp"
        >



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:padding="16dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/location"
                    android:layout_marginEnd="100dp"
                    android:contentDescription="@string/weather"/>

                <TextView
                    android:id="@+id/tv_country"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="140dp"
                    android:gravity="end"
                    android:text="@string/name"
                    android:textColor="@color/primary_text_color"
                    android:textSize="18sp"
                    android:textStyle="bold" />



            </LinearLayout>

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="285dp"
                android:gravity="end"
                android:text="@string/name"
                android:textSize="16sp"
                />


        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"
        android:layout_marginTop="10dp"/>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="130dp"
        app:cardCornerRadius="8sp"
        android:elevation="5dp"
        android:background="@color/white"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_horizontal"

            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="100dp"
                    android:src="@drawable/sunrise"
                    android:layout_marginEnd="20dp"

                    />

                <TextView
                    android:id="@+id/tv_sunrise_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sunrise"
                    android:textSize="18sp"

                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="100dp"
                    android:src="@drawable/sunset"
                    />
                <TextView
                    android:id="@+id/tv_sunset_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sunset"
                    android:textSize="18sp"

                    />
            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>






</LinearLayout>